--- a/Packages/t3mc/Resources/Private/Templates/Default.html
+++ b/Packages/t3mc/Resources/Private/Templates/Default.html
@@ -2,5 +2,6 @@
   xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
   data-namespace-typo3-fluid="true"
 >
-  <h1>Das ist meine Template-Datei</h1>
+  <f:layout name="Default" />
+  <h2>Das ist meine Template-Datei</h2>
 </html>
