--- a/Packages/t3mc/Resources/Private/Templates/Default.html
+++ b/Packages/t3mc/Resources/Private/Templates/Default.html
@@ -3,5 +3,13 @@
   data-namespace-typo3-fluid="true"
 >
   <f:layout name="Default" />
-  <h2>Das ist meine Template-Datei</h2>
+  <f:section name="Main">
+    <h2 class="text-red-500 text-lg">Das ist meine Template-Datei</h2>
+  </f:section>
+  <f:section name="Test">
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum voluptas
+      necessitatibus quo.
+    </p>
+  </f:section>
 </html>
