--- a/Packages/t3mc/Resources/Private/Layouts/Default.html
+++ b/Packages/t3mc/Resources/Private/Layouts/Default.html
@@ -2,5 +2,6 @@
   xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
   data-namespace-typo3-fluid="true"
 >
-  <h1>TYPO3 Test Projekt</h1>
+  <h1 class="text-2xl">TYPO3 Test Projekt</h1>
+  <f:render section="Main" />
 </html>
